tests/snapshots/execution_spec__test-const.md_client.snap
---
source: tests/execution_spec.rs
expression: merged
---
type Query {
  hello: String
}

schema {
  query: Query
}
