tests/snapshots/execution_spec__test-custom-scalar.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar Json

scalar PhoneNumber

type Query {
  foo: [Json]
}

scalar Url

schema {
  query: Query
}
