tests/snapshots/execution_spec__test-dbl-usage.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "type is used in input and output",
    "trace": [
      "User"
    ],
    "description": null
  }
]
