tests/snapshots/execution_spec__test-description-many.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  """
  This is test2
  """
  baz: String
}

scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  """
  This is test
  """
  foo: Bar
}

scalar Url

schema {
  query: Query
}
