tests/snapshots/execution_spec__test-duplicated-link.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Duplicated id: placeholder1",
    "trace": [
      "schema",
      "@link",
      "1"
    ],
    "description": null
  },
  {
    "message": "Duplicated id: placeholder1",
    "trace": [
      "schema",
      "@link",
      "2"
    ],
    "description": null
  },
  {
    "message": "Duplicated id: placeholder2",
    "trace": [
      "schema",
      "@link",
      "3"
    ],
    "description": null
  },
  {
    "message": "Duplicated id: placeholder2",
    "trace": [
      "schema",
      "@link",
      "4"
    ],
    "description": null
  }
]
