tests/snapshots/execution_spec__test-enum-default.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "news": {
        "news": [
          {
            "id": 1,
            "foo": "PUBLISHED"
          },
          {
            "id": 2,
            "foo": "DRAFT"
          },
          {
            "id": 3,
            "foo": "ND"
          }
        ]
      }
    }
  }
}
